--- a/src/app/Home.module.scss
+++ b/src/app/Home.module.scss
@@ -1,3 +1,57 @@
 .home {
-  margin-top: 54px;
+  margin-top: clamp(5px, 2.5vw, 40px);
+
+  &__container {
+    color: black;
+  }
+
+  &__filters {
+    display: flex;
+    column-gap: clamp(25px, 2.5vw, 35px);
+
+    @media (max-width: 600px) {
+      flex-direction: column;
+      row-gap: 15px;
+    }
+  }
+
+  &__selects {
+    display: flex;
+    gap: clamp(15px, 2.5vw, 20px);
+    width: 43%;
+    @media (max-width: 737px) {
+      width: auto;
+    }
+  }
+
+  &__select {
+    width: 50%;
+  }
+
+  &__search {
+  }
+
+  &__card_list {
+    margin-top: clamp(20px, 2.5vw, 30px);
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: clamp(10px, 2vw, 20px);
+
+    @media (max-width: 1200.98px) {
+      grid-template-columns: repeat(3, 1fr);
+    }
+
+    @media (max-width: 850.98px) {
+      grid-template-columns: repeat(2, 1fr);
+    }
+
+    @media (max-width: 514.98px) {
+      grid-template-columns: repeat(1, 1fr);
+    }
+
+    & > .card {
+      width: auto;
+      min-height: 395px;
+    }
+  }
 }
