--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,2 +1,10 @@
 .footer {
+  &__container {
+    margin-top: clamp(30px, 2.5vw, 40px);
+    padding-block: clamp(20px, 2.5vw, 30px);
+    border-top: 1px solid rgba(189, 188, 188, 0.71);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
