--- a/src/app/components/Card/Card.module.scss
+++ b/src/app/components/Card/Card.module.scss
@@ -8,11 +8,16 @@
   padding: 13px;
   display: flex;
   flex-direction: column;
+  transition: all 0.15s ease-in-out;
+
+  &:hover {
+    box-shadow: 0px 0px 5px 4px rgba(0, 0, 0, 0.2);
+  }
 
   &__img {
     align-self: center;
-    height: clamp(323px, 27vw, 380px);
-    width: clamp(323px, 27vw, 380px);
+    height: clamp(190px, 27vw, 380px);
+    width: clamp(190px, 27vw, 380px);
     overflow: hidden;
   }
 
