--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -26,3 +26,8 @@
   font-weight: 500;
   font-size: clamp(22px, 2.5vw, 23px);
 }
+
+%roboto_500_23_25 {
+  font-weight: 500;
+  font-size: clamp(23px, 2.5vw, 25px);
+}
