--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -4,6 +4,9 @@
   width: 100%;
   padding-block: 10px;
   background-color: rgb(245, 244, 244);
+  position: sticky;
+  top: 0;
+  z-index: 2;
 
   &__container {
     display: flex;
