--- a/src/app/Product/[id]/Product.module.scss
+++ b/src/app/Product/[id]/Product.module.scss
@@ -2,7 +2,7 @@
 
 .product {
   &__container {
-    margin-top: clamp(20px, 4vw, 70px);
+    margin-top: clamp(15px, 4vw, 70px);
     display: flex;
     justify-content: center;
     gap: clamp(20px, 3vw, 40px);
@@ -23,6 +23,7 @@
       width: 100%;
     }
     @media (min-width: 1307px) {
+      position: -webkit-sticky; /* Safari */
       position: sticky;
       top: 64px;
     }
@@ -47,6 +48,8 @@
   }
 
   &__image_box {
+    width: 100%;
+    height: 100%;
     @media (max-width: 1307px) {
       width: clamp(345px, 55vw, 670px);
       height: clamp(345px, 55vw, 670px);
@@ -61,8 +64,39 @@
 
   &__content {
     margin-top: 30px;
+
     @media (max-width: 1307px) {
       margin-top: 0px;
+    }
+
+    & .MuiPaper-root {
+      background-color: inherit;
+    }
+  }
+
+  &__accordion {
+    background-color: inherit !important;
+    box-shadow: none !important;
+    &::before {
+      opacity: 1 !important;
+    }
+
+    &_title {
+      font-weight: 500;
+    }
+
+    &_contacts {
+      margin-top: 10px;
+      display: flex;
+      align-items: center;
+      column-gap: 30px;
+      @extend %roboto_500_19_20;
+    }
+  }
+
+  &__accordion_no_before {
+    &::before {
+      opacity: 0 !important;
     }
   }
 
@@ -85,13 +119,10 @@
   }
 
   &__list {
-    margin-top: 13px;
     display: flex;
     flex-direction: column;
     row-gap: 7px;
     font-size: 16px;
-    padding-bottom: 30px;
-    border-bottom: 1px solid rgba(189, 188, 188, 0.71);
 
     &_characteristic {
       width: 49%;
@@ -107,10 +138,6 @@
       display: flex;
       column-gap: 10px;
     }
-  }
-
-  &__field {
-    margin-top: 25px;
   }
 
   &__button {
@@ -131,11 +158,13 @@
 
   &__result {
     display: flex;
-    align-items: end;
+    margin-top: 25px;
+    align-items: center;
+    justify-content: space-between;
     column-gap: 20px;
-    @extend %roboto_600_21_25;
 
     & > p {
+      @extend %roboto_600_21_25;
       text-wrap: nowrap;
     }
   }
@@ -144,7 +173,7 @@
     margin-bottom: 10px;
     display: flex;
     align-items: center;
-    column-gap: 25px;
+    column-gap: 15px;
   }
 
   &__status_ok {
