--- a/src/app/components/Card/Card.module.scss
+++ b/src/app/components/Card/Card.module.scss
@@ -9,6 +9,18 @@
   display: flex;
   flex-direction: column;
   transition: all 0.15s ease-in-out;
+  position: relative;
+
+  & > svg {
+    position: absolute;
+    top: 13px;
+    right: 13px;
+    transition: color 0.1s ease-in-out;
+
+    &:hover {
+      color: red;
+    }
+  }
 
   &:hover {
     box-shadow: 0px 0px 5px 4px rgba(0, 0, 0, 0.2);
