--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -12,6 +12,10 @@
   font-size: clamp(20px, 2.5vw, 22px);
 }
 
+%roboto_400_20_25 {
+  font-size: clamp(20px, 2.5vw, 25px);
+}
+
 %roboto_400_21_25 {
   font-weight: 400;
   font-size: clamp(25px, 2.5vw, 30px);
@@ -22,12 +26,31 @@
   font-size: clamp(19px, 2.5vw, 20px);
 }
 
+%roboto_500_17_20 {
+  font-weight: 500;
+  font-size: clamp(17px, 2.5vw, 20px);
+}
+
 %roboto_500_19_23 {
   font-weight: 500;
   font-size: clamp(22px, 2.5vw, 23px);
 }
 
+%roboto_600_22_23 {
+  font-weight: 600;
+  font-size: clamp(22px, 2.5vw, 23px);
+}
+
+%roboto_600_18_23 {
+  font-weight: 600;
+  font-size: clamp(18px, 2.5vw, 23px);
+}
+
 %roboto_500_23_25 {
   font-weight: 500;
+  font-size: clamp(23px, 2.5vw, 25px);
+}
+%roboto_600_23_25 {
+  font-weight: 600;
   font-size: clamp(23px, 2.5vw, 25px);
 }
