--- a/src/app/Basket/Basket.module.scss
+++ b/src/app/Basket/Basket.module.scss
@@ -6,18 +6,59 @@
   }
   &__title {
     @extend %roboto_500_23_25;
-    margin-bottom: clamp(10px, 4vw, 30px);
+
+    cursor: pointer;
+
+    position: relative;
+
+    &::before {
+      content: "";
+      position: absolute;
+      border-radius: 3px;
+      width: 0;
+      height: 5px;
+      background-color: $colorPurpleDark;
+      right: 0;
+      bottom: -10px;
+      transition: 0.3s;
+    }
+
+    &:hover {
+      &::before {
+        left: 0;
+        width: 100%;
+        transition: 0.3s;
+      }
+    }
+
+    &_active {
+      &::before {
+        left: 0;
+        width: 100%;
+        transition: 0.3s;
+      }
+    }
   }
   &__list {
     display: flex;
     flex-direction: column;
     row-gap: 10px;
   }
-  &__item {
-    height: 120px;
+
+  &__list_steps {
     display: flex;
-    background-color: white;
-    padding: 10px;
+    column-gap: 40px;
+    margin-bottom: clamp(25px, 4vw, 30px);
+
+    @media (max-width: 844px) {
+      column-gap: 20px;
+    }
+  }
+
+  &__item {
+    height: 100px;
+    display: flex;
+    background-color: rgb(243, 241, 241);
     border-radius: 10px;
     position: relative;
 
@@ -26,6 +67,8 @@
       align-items: center;
       width: 100%;
       column-gap: 20px;
+      padding-block: 10px;
+      padding-right: 10px;
 
       @media (max-width: 672px) {
         flex-direction: column;
@@ -112,12 +155,15 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
   }
 
   &__result {
     margin-top: clamp(15px, 2.5vw, 40px);
     padding-top: clamp(10px, 2.5vw, 20px);
-    border-top: 1px solid rgba(189, 188, 188, 0.71);
+
+    border-top: 1px solid rgba(150, 54, 240, 0.7);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -127,7 +173,7 @@
     }
 
     &_sum {
-      @extend %roboto_600_23_25;
+      @extend %roboto_600_23_30;
     }
   }
 
@@ -140,6 +186,8 @@
     transition: all 0.1s ease-in-out;
     font-weight: 600;
     font-size: 20px;
+
+    padding: clamp(10px, 1.8vw, 13px) 10px !important;
 
     &:hover {
       background-color: rgb(1, 175, 1, 0.2);
