--- a/src/app/components/Card/Card.module.scss
+++ b/src/app/components/Card/Card.module.scss
@@ -1,11 +1,8 @@
 @import "../../../assets/styles/variables.scss";
 
 .card {
-  background-color: white;
   cursor: pointer;
   overflow: hidden;
-  border-radius: 7px;
-  padding: 13px;
   display: flex;
   flex-direction: column;
   transition: all 0.15s ease-in-out;
@@ -23,20 +20,34 @@
   }
 
   &:hover {
-    box-shadow: 0px 0px 5px 4px rgba(0, 0, 0, 0.2);
+    // box-shadow: 0px 0px 5px 4px rgba(0, 0, 0, 0.2);
+    & img {
+      transform: scale(1.1);
+    }
   }
 
   &__img {
     align-self: center;
-    height: clamp(190px, 27vw, 380px);
-    width: clamp(190px, 27vw, 380px);
+    height: clamp(190px, 27vw, 410px);
+    width: clamp(190px, 27vw, 410px);
     overflow: hidden;
+
+    @media (max-width: 1200.98px) {
+      height: clamp(190px, 32vw, 410px);
+      width: clamp(190px, 32vw, 410px);
+    }
+
+    @media (max-width: 850.98px) {
+      height: clamp(190px, 47vw, 410px);
+      width: clamp(190px, 47vw, 410px);
+    }
   }
 
   & img {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    transition: transform 0.15s ease-in-out;
   }
 
   &__main {
@@ -62,11 +73,16 @@
   }
 
   &__price {
-    margin-top: 14px;
+    margin-top: 7px;
     @extend %roboto_600_21_25;
     padding-bottom: 1px;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
+  }
+  &__button {
+    margin-top: 10px;
+    width: 100%;
+    padding: clamp(5px, 1.4vw, 10px) 10px !important;
   }
 }
