--- a/src/components/shared/Header/Header.scss
+++ b/src/components/shared/Header/Header.scss
@@ -3,7 +3,7 @@
 .header {
   width: 100%;
   padding-block: 10px;
-  background-color: rgb(245, 244, 244);
+  background-color: rgb(255, 255, 255);
   position: -webkit-sticky; /* Safari */
   position: sticky;
   top: 0;
@@ -56,16 +56,9 @@
   }
 
   &__signup {
-    border: 2px solid black;
-    border-radius: 6px;
+    font-size: 18px;
     padding: 4px 10px;
-    transition: all 0.1s ease-in-out;
     font-weight: 500;
-
-    &:hover {
-      background-color: black;
-      color: white;
-    }
 
     @media (max-width: 870px) {
       display: none;
@@ -74,16 +67,10 @@
 
   &__signup-menu,
   &__signin-menu {
-    border: 2px solid black;
     border-radius: 6px;
     padding: 7px 10px;
     transition: all 0.1s ease-in-out;
     font-weight: 500;
-
-    &:hover {
-      background-color: black;
-      color: white;
-    }
   }
 
   &__menu-buttons {
@@ -96,15 +83,17 @@
     font-weight: 500;
 
     @media (max-width: 870px) {
-      border: 2px solid black;
+      border: 2px solid $colorPurpleDark;
       border-radius: 6px;
       padding: 4px 10px;
       transition: all 0.1s ease-in-out;
       font-weight: 500;
+      background-color: rgba(150, 54, 240, 0.2);
+      color: $colorPurpleDark;
 
       &:hover {
-        background-color: black;
-        color: white;
+        background-color: rgba(150, 54, 240, 0.3);
+        color: $colorPurpleDark;
       }
     }
   }
@@ -148,12 +137,12 @@
 
 .list__item {
   @extend %roboto_400_21_25;
-  border-bottom: 1px solid rgba(151, 151, 151, 0.71);
+  border-bottom: 1px solid rgba(150, 54, 240, 0.7);
   padding-block: 10px;
   padding-left: 5px;
   cursor: pointer;
   &:hover {
-    background-color: rgb(212, 212, 212);
+    background-color: rgba(150, 54, 240, 0.2);
   }
 }
 
