--- a/src/components/shared/RegisterOrLogin/RegisterOrLogin.module.scss
+++ b/src/components/shared/RegisterOrLogin/RegisterOrLogin.module.scss
@@ -42,14 +42,14 @@
     &.active {
       opacity: 1;
       max-width: 100%;
-      max-height: fit-content; // Задайте максимальную высоту, достаточную для контента
+      max-height: fit-content;
     }
   }
 
   &__header {
     padding: 20px 15px;
-    background-color: black;
-    color: white;
+    background-color: rgb(233, 209, 255);
+    color: $colorPurpleDark;
     @extend %roboto_500_19_23;
     display: flex;
     align-items: center;
@@ -65,6 +65,7 @@
   }
 
   &__title {
+    color: $colorPurpleDark;
     @extend %roboto_500_19_23;
   }
 
@@ -83,16 +84,10 @@
   &__button {
     margin-top: 30px;
     width: 100%;
-    border: 2px solid black;
     border-radius: 6px;
     padding: 7px 10px;
     transition: all 0.1s ease-in-out;
     font-weight: 500;
-
-    &:hover {
-      background-color: black;
-      color: white;
-    }
   }
 
   &__no_profile {
