--- a/src/components/shared/Card/Card.module.scss
+++ b/src/components/shared/Card/Card.module.scss
@@ -20,13 +20,13 @@
   }
 
   &:hover {
-    // box-shadow: 0px 0px 5px 4px rgba(0, 0, 0, 0.2);
     & img {
       transform: scale(1.1);
     }
   }
 
   &__img {
+    background-color: $secondary;
     align-self: center;
     height: clamp(190px, 27vw, 410px);
     width: clamp(190px, 27vw, 410px);
