--- a/src/app/Basket/Basket.module.scss
+++ b/src/app/Basket/Basket.module.scss
@@ -167,7 +167,7 @@
     margin-top: clamp(15px, 2.5vw, 40px);
     padding-top: clamp(10px, 2.5vw, 20px);
 
-    border-top: 1px solid $colorPurpleOpacity07;
+    border-top: 1px solid $accent;
     display: flex;
     justify-content: space-between;
     align-items: center;
