--- a/src/components/shared/RegisterOrLogin/RegisterOrLogin.module.scss
+++ b/src/components/shared/RegisterOrLogin/RegisterOrLogin.module.scss
@@ -48,7 +48,7 @@
 
   &__header {
     padding: 20px 15px;
-    background-color: $colorPurpleOpacity02;
+    background-color: $primaryOpacity02;
     color: $primary;
     @extend %roboto_500_19_23;
     display: flex;
