--- a/src/app/Home.module.scss
+++ b/src/app/Home.module.scss
@@ -1,3 +1,5 @@
+@import "@/assets/styles/variables.scss";
+
 .home {
   margin-top: clamp(5px, 2.5vw, 40px);
 
@@ -7,20 +9,71 @@
 
   &__filters {
     display: flex;
-    column-gap: clamp(25px, 2.5vw, 35px);
+    column-gap: 20px;
+    justify-content: flex-end;
+    align-items: flex-end;
 
     @media (max-width: 600px) {
       flex-direction: column;
+      align-items: normal;
       row-gap: 15px;
+    }
+  }
+
+  &__filter_button {
+    height: 38px;
+    @extend %buttonStyles;
+    background-color: $background;
+    color: $accent;
+    border: 2px solid $accent;
+
+    &:hover {
+      color: $background;
+      background-color: $hover;
+      border-color: $hover;
+    }
+
+    padding: 6px 10px;
+    font-weight: 500;
+    border-radius: 5px;
+    display: none;
+
+    @media (max-width: 1000px) {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      column-gap: 15px;
+    }
+
+    @media (max-width: 600px) {
+      flex: 1 1 auto;
+    }
+  }
+
+  &__search {
+    flex: 1 1 auto !important;
+    & > input {
+      padding-block: 6px;
+    }
+    @media (min-width: 870px) {
+      display: none !important;
     }
   }
 
   &__selects {
     display: flex;
     gap: clamp(15px, 2.5vw, 20px);
-    width: 43%;
+    align-items: flex-end;
     @media (max-width: 737px) {
       width: auto;
+    }
+
+    & label {
+      display: none;
+    }
+
+    & div {
+      margin-top: 0px !important;
     }
   }
 
@@ -32,7 +85,7 @@
   }
 
   &__card_list {
-    margin-top: clamp(20px, 2.5vw, 30px);
+    margin-top: 20px;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-gap: clamp(10px, 2vw, 20px);
