--- a/src/components/shared/Header/Header.scss
+++ b/src/components/shared/Header/Header.scss
@@ -9,6 +9,17 @@
   top: 0;
   z-index: 2;
 
+  &__search {
+    flex: 0 1 1000px;
+    padding-inline: 40px;
+    @media (max-width: 870px) {
+      display: none;
+    }
+  }
+
+  &__search_input {
+  }
+
   &__container {
     display: flex;
     justify-content: space-between;
@@ -36,7 +47,7 @@
       }
 
       &:hover {
-        color: rgb(247, 81, 81);
+        color: rgb(247, 66, 66);
       }
     }
   }
@@ -79,9 +90,11 @@
 
   &__signup {
     font-size: 18px;
-    padding: 4px 10px;
+    padding: 6px 10px;
     font-weight: 500;
     border-radius: 5px;
+
+    @extend %buttonStyles;
 
     @media (max-width: 870px) {
       display: none;
@@ -101,16 +114,23 @@
 
   &__signin {
     font-weight: 500;
-    color: $primary;
+    color: $accent;
+
+    &:hover {
+      color: $hover;
+    }
     @media (max-width: 870px) {
       border: 2px solid $primary;
       border-radius: 5px;
       padding: 3px 10px;
-      transition: all 0.1s ease-in-out;
-      background-color: $colorPurpleOpacity02;
+      background-color: $accent;
+      color: $background;
+      border-color: $accent;
 
       &:hover {
-        background-color: $colorPurpleOpacity03;
+        color: $background;
+        background-color: $primary;
+        border-color: $primary;
       }
     }
   }
@@ -154,12 +174,12 @@
 
 .list__item {
   @extend %roboto_400_21_25;
-  border-bottom: 1px solid $colorPurpleOpacity07;
+  border-bottom: 1px solid $primaryOpacity07;
   padding-block: 10px;
   padding-left: 5px;
   cursor: pointer;
   &:hover {
-    background-color: $colorPurpleOpacity02;
+    background-color: $primaryOpacity02;
   }
 }
 
