--- a/src/components/shared/Search/Search.module.scss
+++ b/src/components/shared/Search/Search.module.scss
@@ -2,27 +2,18 @@
 
 .search {
   &__search {
-    flex: 0 1 1000px;
-    padding-inline: 40px;
     display: flex;
 
     & > button {
-      background-color: $primary;
-      color: white;
       font-size: 16px;
       padding: clamp(4px, 0.5vw, 6px) 15px;
-      border: 2px solid $primary;
+      border: 2px solid $accent;
       border-top-right-radius: 5px;
       border-bottom-right-radius: 5px;
       border-left: 0px;
       transition: background-color 0.1s ease-in-out;
 
-      &:hover {
-        background-color: $colorPurpleOpacity09;
-      }
-    }
-    @media (max-width: 870px) {
-      display: none;
+      @extend %buttonStyles;
     }
   }
 
@@ -30,15 +21,15 @@
     width: 100%;
     outline: none;
     background-color: inherit;
-    border: 2px solid $primary;
+    border: 2px solid $accent;
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
-    padding: clamp(4px, 0.5vw, 6px) 15px;
+    padding: 6px 15px;
     transition: background-color 0.1s ease-in-out;
 
     &:hover,
     &:focus {
-      background-color: $colorPurpleOpacity01;
+      background-color: $primaryOpacity01;
     }
   }
 }
