--- a/src/components/shared/UnderHeader/UnderHeader.module.scss
+++ b/src/components/shared/UnderHeader/UnderHeader.module.scss
@@ -12,16 +12,29 @@
       flex-direction: column-reverse;
       row-gap: 20px;
     }
+    @media (max-width: 900px) {
+      max-width: 600px;
+    }
   }
 
   &__logo {
-    width: clamp(188px, 20vw, 257px);
-    height: clamp(133px, 14vw, 181px);
+    width: clamp(244px, 20vw, 257px);
+    height: clamp(172px, 14vw, 181px);
 
     & > img {
       width: 100%;
       height: 100%;
       object-fit: cover;
+    }
+  }
+
+  &__line {
+    width: 1px;
+    height: clamp(133px, 14vw, 181px);
+    background-color: $accent;
+
+    @media (max-width: 830px) {
+      display: none;
     }
   }
 
