--- a/src/assets/styles/globals.scss
+++ b/src/assets/styles/globals.scss
@@ -45,6 +45,10 @@ main {
   overflow-wrap: break-word;
 }
 
+.open_category body {
+  overflow: hidden;
+}
+
 .MuiBadge-badge {
   top: 4px !important;
   right: 3px !important;
@@ -86,5 +90,81 @@ main {
 .MuiMenuItem-root {
   &:hover {
     background-color: $primaryOpacity03 !important;
+  }
+}
+
+.MuiPaper-root {
+  background-color: $background !important;
+  box-shadow: none !important;
+  margin: 0px !important;
+
+  &::before {
+    display: none !important;
+  }
+
+  &::after {
+    position: absolute;
+    left: 0;
+    top: -1px;
+    right: 0;
+    height: 1px;
+    content: "";
+    background-color: $accent !important;
+    opacity: 1 !important;
+  }
+
+  & svg {
+    color: $primary !important;
+  }
+
+  & .MuiAccordionSummary-content {
+    font-weight: 500;
+  }
+}
+
+.MuiSlider-root {
+  height: 3px !important;
+  color: $primary !important;
+
+  & .MuiSlider-thumb {
+    width: 18px !important;
+    height: 18px !important;
+  }
+}
+
+.MuiSlider-thumb:hover {
+  box-shadow: 0px 0px 0px 14px $primaryOpacity01 !important;
+}
+.MuiSlider-thumb.Mui-focusVisible,
+.MuiSlider-thumb.Mui-active {
+  box-shadow: 0px 0px 0px 8px $primaryOpacity01 !important;
+}
+
+.MuiCheckbox-root {
+  &:hover {
+    background-color: $primaryOpacity01 !important;
+  }
+
+  &.Mui-checked {
+    color: $primary !important;
+  }
+}
+
+.MuiAccordionDetails-root {
+  padding-top: 0px !important;
+}
+
+.MuiFormControlLabel-root {
+  width: 100% !important;
+  margin-right: 0px !important;
+}
+
+.MuiRadio-root {
+  &:hover {
+    background-color: $primaryOpacity01 !important;
+  }
+
+  &.Mui-checked {
+    color: $primary !important;
   }
 }
