--- a/src/app/Home.module.scss
+++ b/src/app/Home.module.scss
@@ -45,9 +45,24 @@
 
     &_text {
       & > h1 {
-        @extend %inter_700_40_68;
+        @extend %inter_700_33_68;
         line-height: 1.2;
         word-wrap: nowrap;
+      }
+
+      &_gift {
+        position: relative;
+
+        & svg {
+          position: absolute;
+          bottom: 0;
+
+          right: -50%;
+          color: $hover;
+          z-index: -1;
+          width: clamp(50px, 4.5vw, 100px);
+          height: clamp(50px, 4.5vw, 100px);
+        }
       }
 
       &_welcome {
@@ -57,12 +72,16 @@
       &_name {
         color: rgb(220, 42, 28);
       }
+
+      & p {
+        font-size: clamp(17px, 2.5vw, 19px);
+      }
     }
 
     &_subtitle {
       display: flex;
       flex-direction: column;
-      row-gap: 5px;
+      row-gap: 10px;
       margin-top: clamp(20px, 2.5vw, 40px);
     }
 
