--- a/src/components/shared/RegisterOrLogin/RegisterOrLogin.module.scss
+++ b/src/components/shared/RegisterOrLogin/RegisterOrLogin.module.scss
@@ -94,6 +94,7 @@
     margin-top: 20px;
     padding-top: 10px;
     font-size: 16px;
+    padding-bottom: 2px;
 
     & > span {
       cursor: pointer;
