--- a/src/components/shared/Card/Card.module.scss
+++ b/src/components/shared/Card/Card.module.scss
@@ -8,6 +8,26 @@
   transition: all 0.15s ease-in-out;
   position: relative;
 
+  &__icons {
+    display: flex;
+    align-items: center;
+    column-gap: 15px;
+    position: absolute;
+    top: 13px;
+    right: 13px;
+
+    & > a {
+      height: 33px;
+    }
+    & svg {
+      transition: color 0.1s ease-in-out;
+
+      &:hover {
+        color: red;
+      }
+    }
+  }
+
   & > svg {
     position: absolute;
     top: 13px;
