--- a/src/components/shared/Card/Card.module.scss
+++ b/src/components/shared/Card/Card.module.scss
@@ -96,3 +96,36 @@
     padding: clamp(5px, 1.4vw, 10px) 10px !important;
   }
 }
+
+.skeleton {
+  & > .card__img {
+    background-color: inherit !important;
+  }
+  &__title {
+    margin-top: 5px;
+    height: clamp(20px, 4vw, 21px) !important;
+  }
+
+  &__category {
+    margin-top: 5px;
+    height: 17px !important;
+    width: 60%;
+  }
+
+  &__price {
+    margin-top: 7px;
+    height: clamp(22px, 4vw, 26px) !important;
+    width: 50%;
+  }
+
+  &__button {
+    margin-top: 10px;
+    height: clamp(39px, 4vw, 49px) !important;
+    border-radius: 6px;
+  }
+
+  &__img {
+    width: 100%;
+    height: 100%;
+  }
+}
