--- a/src/components/shared/Card/Card.module.scss
+++ b/src/components/shared/Card/Card.module.scss
@@ -94,6 +94,30 @@
     margin-top: 10px;
     width: 100%;
     padding: clamp(5px, 1.4vw, 10px) 10px !important;
+
+    &_active {
+      background-color: rgba(233, 23, 23, 0.3) !important;
+      color: rgb(233, 23, 23) !important;
+      border: 2px solid rgb(233, 23, 23) !important;
+      transition: all 0.1s ease-in-out;
+
+      &:hover {
+        background-color: rgba(233, 23, 23, 0.4) !important;
+      }
+    }
+
+    &_inactive {
+      background-color: rgba(85, 228, 85, 0.3) !important;
+      color: rgb(6, 114, 6) !important;
+      border: 2px solid rgb(6, 114, 6) !important;
+      transition: all 0.1s ease-in-out;
+
+      &:hover {
+        background-color: rgba(85, 228, 85) !important;
+        color: rgb(6, 114, 6) !important;
+        border: 2px solid rgb(6, 114, 6) !important;
+      }
+    }
   }
 }
 
