--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -4,6 +4,7 @@ $primaryOpacity05: rgba(210, 143, 50, 0.5);
 $primaryOpacity03: rgba(210, 143, 50, 0.3);
 $primaryOpacity02: rgba(210, 143, 50, 0.2);
 $primaryOpacity01: rgba(210, 143, 50, 0.1);
+$primaryOpacity005: rgba(210, 143, 50, 0.05);
 $secondaryDarker: rgb(255, 225, 184);
 $secondaryOpacity02: rgba(233, 188, 124, 0.2);
 $grayLight: rgb(134, 134, 134);
